<resources>
    <string name="app_name">coreLib</string>
    <string name="delete">删除</string>
    <string name="delete_point">删除点</string>
    <string name="boundary">边界</string>
    <string name="expand">展开</string>
    <string name="add">添加</string>
    <string name="add_point">添加点</string>
    <string name="feature">特点</string>
    <string name="auto_exc">全自动</string>
    <string name="auto_code">代码</string>
    <string name="preview">预览</string>
    <string name="attribute">属性</string>
    <string name="image_feature_extraction">图片特征提取</string>
    <string name="merge">合并</string>
    <string name="background">设为底色</string>
    <string name="useBackground">补充底色</string>
    <string name="test_pick_up_points">测试代码</string>
    <string name="add_click_are">点击区域</string>
    <string name="inverse_value">底色取反</string>
    <string name="find_the_image_area">找图区域</string>
    <string name="take_point_interval">总取点数</string>

    <string name="accessibility_service_label">Schedule</string>
    <string name="accessibility_service_description">Schedule</string>
    <string name="ok">确定</string>
    <string name="clear">清除</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="all_point_key">全点取特</string>
    <string name="filter_out_areas">过滤掉区域</string>
    <string name="full_screen">全屏幕</string>
    <string name="mini_steps">最小步数</string>
    <string name="sort_by_x">x轴倒序</string>
    <string name="offset_value">底色取差</string>
</resources>