<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/colorView"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colorRgbTv"
        style="@style/normalTitleTv"
        app:layout_constraintBottom_toBottomOf="@+id/colorView"
        app:layout_constraintStart_toEndOf="@+id/colorView"
        app:layout_constraintTop_toTopOf="@+id/colorView"
        tools:text=" 12 :37 :19" />

    <Button
        android:id="@+id/deleteKeyBtn"
        style="@style/normalTitleTv"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/colorRgbTv"
        app:layout_constraintStart_toEndOf="@+id/colorRgbTv"
        app:layout_constraintTop_toTopOf="@+id/colorRgbTv" />

    <CheckBox
        android:id="@+id/showBoundary"
        style="@style/normalTitleTv"
        android:text="@string/boundary"
        app:layout_constraintBottom_toBottomOf="@+id/deleteKeyBtn"
        app:layout_constraintStart_toEndOf="@+id/deleteKeyBtn"
        app:layout_constraintTop_toTopOf="@+id/deleteKeyBtn" />


    <Button
        android:id="@+id/expandBtn"
        style="@style/normalTitleTv"
        android:layout_marginTop="16dp"
        android:text="@string/expand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorView" />

    <Button
        android:id="@+id/deletePointBtn"
        style="@style/normalTitleTv"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/expandBtn"
        app:layout_constraintStart_toEndOf="@+id/expandBtn"
        app:layout_constraintTop_toTopOf="@+id/expandBtn" />

    <Button
        android:id="@+id/addPointBtn"
        style="@style/normalTitleTv"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/deletePointBtn"
        app:layout_constraintStart_toEndOf="@+id/deletePointBtn"
        app:layout_constraintTop_toTopOf="@+id/deletePointBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>